--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ footer {
 }
 
 footer p {
-  font-size: 24px; /*font size in footer*/
+  font-size: 36px; /*font size in footer*/
   padding: 0;
   margin: 0;
 }
@@ -81,7 +81,7 @@ header nav a, header nav a:visited {
   display: block;
   line-height: 60px;
   text-decoration: none;
-  color: #C8C1B7;                         /*changes banner text color*/
+  color:  #FFB6C1;                         /*changes banner text color*/
   transition: color 200ms ease-in-out;
 }
 
